# hack-the-insurance-backend

./: docker-compose.yml  main.py  pyproject.toml
migrations/: 20231214230009_user.py  20231216125314_blood_test.py  user.py
migrations/static/: mock_blood_test.json
src/hack_the_insurance/api/: app.py
src/hack_the_insurance/api/router/: health_advisor.py  psychologist.py  radiologist.py
src/hack_the_insurance/config/: mongo.py
src/hack_the_insurance/models/: __init__.py  base.py  blood_test.py  user.py
src/hack_the_insurance/schemas/: blood_test.py  gpt_response.py
