[tool.poetry]
name = "hack-the-insurance-backend"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = {extras = ["all"], version = "^0.105.0"}
langchain = "^0.0.350"
openai = "^1.3.8"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
